CFP-1723 Add Healthz endpoint under api/healthz
