# internal/app/cloudgontroller/api/v3/controllers/health.go
@@ -1,0 +1,21 @@
+package controllers
+
+import (
+	"github.com/labstack/echo/v4"
+	"net/http"
+)
+
+// GetHealth godoc
+// @Summary Health get health
+// @Description Health endpoint to check platform availability
+// @Tags Health
+// @Accept json
+// @Produce json
+// @Success 200 {object} interface{}
+// @Failure 404 {object} HTTPError
+// @Failure 400 {object} HTTPError
+// @Failure 500 {object} HTTPError
+// @Router /healthz [get]
+func GetHealth(c echo.Context) error {
+	return c.JSONBlob(http.StatusOK, []byte("OK"))
+}
